semifinal: put semifinal config template in settings/

--- a/prologin/.gitignore
+++ b/prologin/.gitignore
@@ -2,6 +2,7 @@ media/*
 prologin/static/lib/*
 prologin/settings/dev.py
 prologin/settings/prod.py
+prologin/settings/semifinal.py
 documents/*.pdf
 documents/*.aux
 documents/*.log
