requirements: Specify rules version
Specify that rules should be v1.4 (2.0 breaks stuff)

--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ requests
 # Celery storage & broker for async tasks
 redis
 # Generic rules/permissions
-rules
+rules==1.4
 # Transifex client for translation pull/push
 transifex-client
 # Typing module backport
