--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,8 @@ django-formtools
 # Impersonation framework
 # TODO: use upstream version when it's unfucked
 git+https://github.com/zopieux/django-hijack.git@prologin
+# NPM static finder
+django-npm
 # Export metrics for prometheus monitoring
 django-prometheus
 # Google Recaptcha/Nocaptcha support
