package.json: use git+https:// syntax

--- a/assets/package.json
+++ b/assets/package.json
@@ -18,7 +18,7 @@
     "font-awesome": "4.x.x",
     "jquery": "3.x.x",
     "mathjax": ">=2.7.4",
-    "onesignal-emoji-picker": "https://github.com/OneSignal/emoji-picker",
+    "onesignal-emoji-picker": "git+https://github.com/OneSignal/emoji-picker",
     "pygments-css": "1.x.x",
     "select2": "4.x.x"
   }
