--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ beautifulsoup4
 # HTML sanitizer (Markdown escaping)
 bleach
 # For async tasks (sending mails, correcting submissions, etc.)
-celery
+# TODO: use celery when 5.0 is out (async keyword support)
+# https://github.com/celery/celery/issues/4500
+git+https://github.com/celery/celery.git
 # Django
 django<3
 # For ordered models (QCM questions, semifinal whishes, etc.)
@@ -73,7 +75,8 @@ pyyaml
 # HTTP queries
 requests
 # Celery storage & broker for async tasks
-redis
+# FIXME: unpin when https://github.com/celery/celery/issues/5175 is fixed
+redis==2.10.6
 # Generic rules/permissions
 rules==1.4
 # Transifex client for translation pull/push
