--- a/requirements.txt
+++ b/requirements.txt
@@ -31,8 +31,7 @@ django-debug-toolbar
 # Form wizards (they were a Django builtin, but split as of 1.8)
 django-formtools
 # Impersonation framework
-# TODO: use upstream version when it's unfucked
-git+https://github.com/zopieux/django-hijack.git@prologin
+django-hijack
 # NPM static finder
 django-npm
 # Export metrics for prometheus monitoring
