winners: add Pâris Douady for 2017 and 2018

--- a/prologin/prologin/settings/prologin-winners.yaml
+++ b/prologin/prologin/settings/prologin-winners.yaml
@@ -1,5 +1,7 @@
 # Use "!" for "no edition" (don't forget the quotes), leave blank if no data available
 
+2018: Pâris Douady
+2017: Pâris Douady
 2016: Nathanaël Courant
 2015: Clément Villain
 2014: Lucas Pluvinage
