--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install flake8 coverage
-          pip install -r requirements.txt --use-feature=2020-resolver
+          pip install -r requirements.txt
 
       - name: Test
         working-directory: ./prologin
