assets: update mathjax version in package.json (>= 2.7.4 becomes 3.x.x)

--- a/assets/package.json
+++ b/assets/package.json
@@ -17,7 +17,7 @@
     "datatables.net-bs": "1.x.x",
     "font-awesome": "4.x.x",
     "jquery": ">=3.4.0",
-    "mathjax": ">=2.7.4",
+    "mathjax": "3.x.x",
     "onesignal-emoji-picker": "git+https://github.com/OneSignal/emoji-picker",
     "select2": "4.x.x"
   }
