--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,6 +28,10 @@ services:
         source: "${SITE_DOCUMENTS:-../../documents}"
         target: /var/prologin/documents
         read_only: true
+      - type: bind
+        source: "${SITE_ARCHIVES:-../../archives}"
+        target: /var/prologin/archives
+        read_only: true
     depends_on:
       - prologin_site_db
   prologin_site_db:
