--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ django-crispy-forms
 # django-csp
 # Back-end wrapper for Datatable (jQuery plugin for dynamic table)
 # TODO: use upstream version when it's unfucked
-git+https://github.com/prologin/django-datatable-view.git@prologin
+git+https://gitlab.com/prologin/tech/packages/django-datatable-view.git@prologin
 # Debug Toolbar
 django-debug-toolbar
 # Form wizards (they were a Django builtin, but split as of 1.8)
@@ -31,7 +31,7 @@ django-formtools
 # Impersonation framework
 django-hijack<3,>=2.3.0
 # Django conflose
-git+https://github.com/prologin/django-conflose
+git+https://gitlab.com/prologin/tech/packages/django-conflose
 # Django massmailer
 django-massmailer==0.5
 # NPM static finder
