--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,7 @@ djmail>=0.10.0
 # Tool to query Geoip services for exam center geo-localization
 geopy
 # Non-sucky template engine
-jinja2
+jinja2<3.1
 # XML parsing (eg. corrector communication)
 lxml
 # Markdown support
