winners: Updated 2019 to 2024 first place
Squashed commit of the following:

* winners: UTF-8 space

* winners: Updated

--- a/prologin/prologin/settings/prologin-winners.yaml
+++ b/prologin/prologin/settings/prologin-winners.yaml
@@ -1,5 +1,11 @@
 # Use "!" for "no edition" (don't forget the quotes), leave blank if no data available
 
+2024: Guilhem Gerouille
+2023: Guilhem Gerouille
+2022: Arthur Léonard
+2021: Arthur Léonard
+2020: Adrien Vannson
+2019: Victor Miquel
 2018: Pâris Douady
 2017: Pâris Douady
 2016: Nathanaël Courant
